# modern-python-cheat-sheet

./: .devcontainer.json  .gitignore  README.md  pyproject.toml  test.py
notebooks/: 02_sequences.ipynb
notebooks/01_strings/: 01_basics.ipynb  02_case.ipynb  02_string_methods.ipynb  03_format_vs_fstring.ipynb  03_formatting.ipynb  04_raw_strings.ipynb  TODO  XX_anti_patterns.ipynb
notebooks/02_sequences/: 01_filtering_items.ipynb  02_removing_items.ipynb  03_removing_items_and_slicing.ipynb  04_adding_items.ipynb  05_combining_lists_of_items.ipynb  06_modify_all_items.ipynb  07_sorting_items.ipynb  08_copying_lists.ipynb  09_flatenning_lists.ipynb  09_handling_duplicates.ipynb  10_anti_patterns.ipynb
notebooks/03_dicts/: TODO
notebooks/03_sets/: 01_adding_removing.ipynb  02_unions_intersections.ipynb  03_handling_duplicates.ipynb  04_fronzen_sets.ipynb
notebooks/04_dicts/: 01_basics.ipynb  02_browsing.ipynb  03_accessing_items.ipynb  04_removing_items.ipynb  05_copying_dicts.ipynb  06_membership_test.ipynb  07_merging_dicts.ipynb  08_sorting_items.ipynb  09_filtering_items.ipynb  10_typed_dicts.ipynb  TODO  XX_anti_patterns.ipynb
notebooks/05_collections/: 01_default_dict.ipynb  02_ordered_dict.ipynb  03_counter.ipynb  04_deque.ipynb  05_named_tuple.ipynb  06_enum.ipynb  07_user_x.ipynb
notebooks/06_conditions/: 00_basics.ipynb  01_switch_case.ipynb  XX_anti_patterns.ipynb
notebooks/07_arithmetics/: 02_decimals.ipynb  03_fractions.ipynb
notebooks/08_date_and_time/: 01_basics.ipynb  02_formatting_and_parsing.ipynb  03_combining_and_splitting.ipynb  04_replace.ipynb  05_working_with_weeks.ipynb  06_zoneinfo.ipynb
notebooks/99_MISC/: TODO  TOOLS  chaining_comparisons.ipynb  checking_type.ipynb  comprehensions.ipynb  (+12 more)
(+96 files in other folders)
