[tool]

[tool.poetry]
name = "Modern Python Cheat Sheet"
version = "1.0.0"
description = "Modern Python Cheat Sheet"
authors = ["David Dahan <david.dahan3@gmail.com>"]

[tool.black]
target-version = ["py312"]

[tool.poetry.dependencies]
python = "3.12.*"
ipdb = "*"        # https://github.com/gotcha/ipdb
ipykernel = "*"   # https://github.com/ipython/ipykernel
pydantic = "*"    # https://github.com/pydantic/pydantic
pytest = "*"      # https://github.com/pytest-dev/pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
