[tool.poetry]
name = "Modern Python Cheat Sheet"
version = "1.0.0"
description = "Modern Python Cheat Sheet"
authors = ["David Dahan <david.dahan3@gmail.com>"]
package-mode = false

[tool.black]
target-version = ["py312"]

[tool.poetry.dependencies]
python = "3.12.*"
pydantic = "*"    # https://github.com/pydantic/pydantic

[tool.poetry.group.dev.dependencies]
ipdb = "*"      # https://github.com/gotcha/ipdb
pytest = "*"    # https://github.com/pytest-dev/pytest
ipykernel = "*" # https://github.com/ipython/ipykernel

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
